code: copy and images

--- a/index.html
+++ b/index.html
@@ -2,13 +2,69 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Victrola Roadshow</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">Victrola Roadshow</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div> -->
+      </div>
+    </nav>
     <div class="container">
-      <div class="jumbotron">
-        <h1>Welcome to the Victrola Roadshow</h1>
+      <br/>
+      <div>
+        <h1 class="display-1">The Victrola Roadshow</h1>
+      </div>
+      <br /><br />
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="victrola.jpg" alt="Victor-Victrola" width="100%">
+        </div>
+        <div class="col-sm-8">
+          <p class="lead">This website is a place for people interested in knowing about the invention of the phonograph, particularly the Victrola.</p>
+          <p class="lead">Here you can learn some things that will be of help in providing information about this great forerunner of home music entertainment.</p>
+        </div>
+      </div>
+      <br /><br />
+      <div class="row">
+        <div class="col-sm-8">
+          <p class="lead">I have a very beautifull Victrola model VV 80 which can play the records that I found in various flea markets, thrift stores, antique shops and garage sales.</p>
+          <p class="lead">I have made a comprehensive index of all of the records. It can be used to find any record and performer.</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="victrola-closeup.jpg" alt="Victor-Victrola" width="100%">
+        </div>
+      </div>
+      <br /><br />
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="victrola-closeup-2.jpg" alt="Record" width="100%">
+        </div>
+        <div class="col-sm-8">
+          <p class="lead">Please contact me at the e-mail address listed below if you would like to hear a song. Once I have made a YouTube of the song, I can publish a list of the songs and make them available to others. It's that simple.</p>
+          <p class="lead">I only ask that you "pay it forward" and share your appreciation of fine music and music technology with others. A copy of the index is free and available upon request.</p>
+          <p class="lead" style="text-align: right">- Emil J. Cost, founder of The Victrola Roadshow</p>
+          <p class="lead" style="text-align: right">VictrolaRoadshow@gmail.com</p>
+        </div>
       </div>
     </div>
+
   </body>
 </html>
