--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="col-sm-8">
           <p class="lead">Please contact me at the e-mail address listed below if you would like to hear a song. Once I have made a YouTube of the song, I can publish a list of the songs and make them available to others. It's that simple.</p>
-          <p class="lead">I only ask that you "pay it forward" and share your appreciation of fine music and music technology with others. A copy of the index is free and available upon request.</p>
+          <p class="lead">A copy of the index is free and available upon request.</p>
           <p class="lead" style="text-align: right">- Emil J. Cost, founder of The Victrola Roadshow</p>
           <p class="lead" style="text-align: right">VictrolaRoadshow@gmail.com</p>
         </div>
