copy: beautiful has one "l"

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <br /><br />
       <div class="row">
         <div class="col-sm-8">
-          <p class="lead">I have a very beautifull Victrola model VV 80 which can play the records that I found in various flea markets, thrift stores, antique shops and garage sales.</p>
+          <p class="lead">I have a very beautiful Victrola model VV 80 which can play the records that I found in various flea markets, thrift stores, antique shops and garage sales.</p>
           <p class="lead">I have made a comprehensive index of all of the records. It can be used to find any record and performer.</p>
         </div>
         <div class="col-sm-4">
