youtube embed whispering song

--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
           <p class="lead">I have made a comprehensive index of all of the records. It can be used to find any record and performer.</p>
         </div>
         <div class="col-sm-4">
-          <img src="victrola-closeup.jpg" alt="Victor-Victrola" width="100%">
+          <iframe width="336" height="189" src="https://www.youtube-nocookie.com/embed/uUcD_bgmV4k?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
       <br /><br />
       <div class="row">
         <div class="col-sm-4">
-          <img src="victrola-closeup-2.jpg" alt="Record" width="100%">
+          <img src="victrola-closeup.jpg" alt="Victor-Victrola" width="100%">
         </div>
         <div class="col-sm-8">
           <p class="lead">Please contact me at the e-mail address listed below if you would like to hear a song. Once I have made a YouTube of the song, I can publish a list of the songs and make them available to others. It's that simple.</p>
           <p class="lead">A copy of the index is free and available upon request.</p>
           <p class="lead" style="text-align: right">- Emil J. Cost, founder of The Victrola Roadshow</p>
-          <p class="lead" style="text-align: right">VictrolaRoadshow@gmail.com</p>
+          <p class="lead" style="text-align: right">victrolaroadshow@gmail.com</p>
         </div>
       </div>
       <br /><br />
